feat: Update product images for enhanced catalog
- Replaced existing product images for gold, money, diamond, and silver rings with new files to improve visual quality.
- Added new image files for gold rings, money rings, and diamond rings to the product catalog.
- Updated HTML references to reflect the new image filenames and formats.

--- a/corano/index.html
+++ b/corano/index.html
@@ -541,8 +541,8 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-6.jpg" alt="product"> -->
-                                        <img class="pri-img" src="assets/img/product/gold-wedding-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-13.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/gold-ring.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/gold-rings.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -595,8 +595,9 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-7.jpg" alt="product"> -->
-                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-9.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpeg" alt="product">
+                                        <!-- <img class="sec-img" src="assets/img/product/product-9.jpg" alt="product"> -->
+                                        <img class="sec-img" src="assets/img/product/mony-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -650,7 +651,7 @@
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-8.jpg" alt="product"> -->
                                         <img class="pri-img" src="assets/img/product/diamond-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-11.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/diamond-rings.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -702,7 +703,7 @@
                                         <!-- <img class="pri-img" src="assets/img/product/product-16.jpg" alt="product"> -->
                                         <img class="pri-img" src="assets/img/product/silver-ring.jpg" alt="product">
                                         <!-- <img class="sec-img" src="assets/img/product/product-10.jpg" alt="product"> -->
-                                        <img class="sec-img" src="assets/img/product/mony-ring.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/silver-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -755,8 +756,8 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-10.jpg" alt="product"> -->
-                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-9.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/mony-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -809,8 +810,8 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-1.jpg" alt="product"> -->
-                                          <img class="pri-img" src="assets/img/product/gold-wedding-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-18.jpg" alt="product">
+                                          <img class="pri-img" src="assets/img/product/gold-ring.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/gold-rings.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -863,8 +864,8 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-2.jpg" alt="product"> -->
-                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-17.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/mony-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -919,7 +920,7 @@
                                         <!-- <img class="pri-img" src="assets/img/product/product-3.jpg" alt="product"> -->
                                         <img class="pri-img" src="assets/img/product/diamond-ring.jpg" alt="product">
                                         <!-- <img class="sec-img" src="assets/img/product/product-16.jpg" alt="product"> -->
-                                        <img class="sec-img" src="assets/img/product/silver-ring.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/diamond-rings.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -970,7 +971,7 @@
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-4.jpg" alt="product"> -->
                                         <img class="pri-img" src="assets/img/product/silver-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-15.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/silver-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -1023,8 +1024,8 @@
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
                                         <!-- <img class="pri-img" src="assets/img/product/product-5.jpg" alt="product"> -->
-                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-14.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/mony-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
