--- a/corano-dark/index.html
+++ b/corano-dark/index.html
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewellery online store</p>
+                                <p>Welcome to Corano Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -516,7 +516,7 @@
         <!-- hero slider area end -->
 
         <!-- twitter feed area start -->
-        <div class="twitter-feed">
+        <!-- <div class="twitter-feed">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -526,7 +526,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- twitter feed area end -->
 
         <!-- service policy area start -->
@@ -2374,16 +2374,16 @@
                         <div class="testimonial-thumb-wrapper">
                             <div class="testimonial-thumb-carousel">
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-1.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-1.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-2.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-3.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                             </div>
                         </div>
@@ -2449,7 +2449,7 @@
                         <div class="group-product-banner">
                             <figure class="banner-statistics">
                                 <a href="#">
-                                    <img src="assets/img/banner/img-bottom-banner.jpg" alt="product banner">
+                                    <img src="assets/img/banner-gold.png" alt="product banner">
                                 </a>
                                 <div class="banner-content banner-content_style3 text-center">
                                     <h6 class="banner-text1">BEAUTIFUL</h6>
@@ -3010,7 +3010,7 @@
                                 </div>
                             </div>
                             <div class="widget-body">
-                                <p>We are a team of designers and developers that create high quality wordpress, shopify, Opencart </p>
+                                <p>We are a team of designers and developers that create high quality websites. </p>
                             </div>
                         </div>
                     </div>
