--- a/corano/index.html
+++ b/corano/index.html
@@ -46,7 +46,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Jevoo Jewellery online store</p>
+                                <p>Welcome to Jevoo Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -355,7 +355,7 @@
         <!-- hero slider area end -->
 
         <!-- twitter feed area start -->
-        <div class="twitter-feed">
+        <!-- <div class="twitter-feed">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -365,7 +365,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- twitter feed area end -->
 
         <!-- service policy area start -->
@@ -1097,16 +1097,16 @@
                         <div class="testimonial-thumb-wrapper">
                             <div class="testimonial-thumb-carousel">
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-1.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-1.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-2.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-3.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                             </div>
                         </div>
@@ -1172,7 +1172,7 @@
                         <div class="group-product-banner">
                             <figure class="banner-statistics">
                                 <a href="#">
-                                    <img src="assets/img/banner/img-bottom-banner.jpg" alt="product banner">
+                                    <img src="assets/img/banner-gold.png" alt="product banner">
                                 </a>
                                 <div class="banner-content banner-content_style3 text-center">
                                     <h6 class="banner-text1">BEAUTIFUL</h6>
@@ -1733,7 +1733,7 @@
                                 </div>
                             </div>
                             <div class="widget-body">
-                                <p>We are a team of designers and developers that create high quality wordpress, shopify, Opencart </p>
+                                <p>We are a team of designers and developers that create high quality websites. </p>
                             </div>
                         </div>
                     </div>
@@ -1744,7 +1744,7 @@
                                 <address class="contact-block">
                                     <ul>
                                         <li><i class="pe-7s-home"></i> 4710-4890 Breckinridge USA</li>
-                                        <li><i class="pe-7s-mail"></i> <a href="mailto:demo@plazathemes.com">demo@yourdomain.com </a></li>
+                                        <li><i class="pe-7s-mail"></i> <a href="mailto:demo@plazathemes.com">jevoo@jewellery.com </a></li>
                                         <li><i class="pe-7s-call"></i> <a href="tel:(012)800456789987">(012) 800 456 789-987</a></li>
                                     </ul>
                                 </address>
