--- a/corano/new-products.html
+++ b/corano/new-products.html
@@ -276,7 +276,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry online store</p>
+                                <p>Welcome to Corano Jewelry Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
