--- a/corano-dark/blog-right-sidebar.html
+++ b/corano-dark/blog-right-sidebar.html
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewellery online store</p>
+                                <p>Welcome to Corano Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -755,7 +755,7 @@
                                 </div>
                             </div>
                             <div class="widget-body">
-                                <p>We are a team of designers and developers that create high quality wordpress, shopify, Opencart </p>
+                                <p>We are a team of designers and developers that create high quality websites. </p>
                             </div>
                         </div>
                     </div>
