--- a/corano/our-promises.html
+++ b/corano/our-promises.html
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Jevoo Jewellery online store</p>
+                                <p>Welcome to Jevoo Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -192,7 +192,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5">
                         <div class="about-thumb">
-                            <img src="assets/img/about/about.jpg" alt="about thumb">
+                            <!-- <img src="assets/img/about/about.jpg" alt="about thumb"> -->
+                            <img src="assets/img/jevoo-bespoke.jpg" alt="about thumb">
                         </div>
                     </div>
                     <div class="col-lg-7">
@@ -273,16 +274,16 @@
                         <div class="testimonial-thumb-wrapper">
                             <div class="testimonial-thumb-carousel">
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-1.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-1.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-2.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-3.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                                 <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial/testimonial-2.png" alt="testimonial-thumb">
+                                    <img src="assets/img/testimonial/testimonials-3.jpg" alt="testimonial-thumb">
                                 </div>
                             </div>
                         </div>
@@ -447,7 +448,7 @@
                                 </div>
                             </div>
                             <div class="widget-body">
-                                <p>We are a team of designers and developers that create high quality wordpress, shopify, Opencart </p>
+                                <p>We are a team of designers and developers that create high quality websites. </p>
                             </div>
                         </div>
                     </div>
@@ -458,7 +459,7 @@
                                 <address class="contact-block">
                                     <ul>
                                         <li><i class="pe-7s-home"></i> 4710-4890 Breckinridge USA</li>
-                                        <li><i class="pe-7s-mail"></i> <a href="mailto:demo@plazathemes.com">demo@yourdomain.com </a></li>
+                                        <li><i class="pe-7s-mail"></i> <a href="mailto:demo@plazathemes.com">jevoo@jewellery.com </a></li>
                                         <li><i class="pe-7s-call"></i> <a href="tel:(012)800456789987">(012) 800 456 789-987</a></li>
                                     </ul>
                                 </address>
