feat: Update product images and references in HTML files
- Replaced existing product image references in the HTML files with new image filenames for improved visual quality.
- Added new image files for diamond and gold jewelry, enhancing the product catalog's appeal.
- Ensured consistency across both light and dark theme HTML files by updating image paths accordingly.

--- a/corano-dark/index.html
+++ b/corano-dark/index.html
@@ -2496,7 +2496,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-3.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -2596,7 +2596,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-13.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -2772,7 +2772,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-18.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
