--- a/corano/index.html
+++ b/corano/index.html
@@ -1199,7 +1199,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-1.jpg" alt="">
+                                                    <img src="assets/img/product/diamond-ring.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1219,7 +1219,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-3.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1239,7 +1239,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-5.jpg" alt="">
+                                                    <img src="assets/img/product/gold-jewelry.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1259,7 +1259,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-7.jpg" alt="">
+                                                    <img src="assets/img/product/diamond-earring.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1279,7 +1279,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-9.jpg" alt="">
+                                                    <img src="assets/img/product/gold-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1299,7 +1299,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-11.jpg" alt="">
+                                                    <img src="assets/img/product/gold-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1319,7 +1319,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-13.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1339,7 +1339,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-15.jpg" alt="">
+                                                    <img src="assets/img/product/gold-jewelry.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1375,7 +1375,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-17.jpg" alt="">
+                                                    <img src="assets/img/product/gold-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1395,7 +1395,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-16.jpg" alt="">
+                                                    <img src="assets/img/product/gold-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1415,7 +1415,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-12.jpg" alt="">
+                                                    <img src="assets/img/product/gold-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1435,7 +1435,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-11.jpg" alt="">
+                                                    <img src="assets/img/product/diamond-necklace.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1455,7 +1455,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-7.jpg" alt="">
+                                                    <img src="assets/img/product/diamond-earring.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1475,7 +1475,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-2.jpg" alt="">
+                                                    <img src="assets/img/product/gold-jewelry.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1495,7 +1495,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-18.jpg" alt="">
+                                                    <img src="assets/img/product/gold-handmade.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
@@ -1515,7 +1515,7 @@
                                         <div class="group-item">
                                             <div class="group-item-thumb">
                                                 <a href="product-details.html">
-                                                    <img src="assets/img/product/product-14.jpg" alt="">
+                                                    <img src="assets/img/product/gold-jewelry.jpeg" alt="">
                                                 </a>
                                             </div>
                                             <div class="group-item-desc">
